# cTasks

./: Cargo.toml  README.md
src/: constants.rs  main.rs  preferences.rs  utils.rs
src/general_widgets/: icons.rs  mod.rs  section.rs  section_box.rs  seperators.rs  split_row_table.rs  split_table_double.rs  split_table_single.rs
src/resource_details/: applications_details.rs  chart.rs  disk_details.rs  memory_detail.rs  mod.rs  processes_table.rs  resource_details.rs
src/resource_pages/: applications_page.rs  battery_page.rs  chart.rs  cpu_page.rs  disk_details.rs  disk_page.rs  memory_page.rs  mod.rs  processes_page.rs  resource_details.rs  wifi_page.rs
src/resource_previews/: applications_preview.rs  battery_preview.rs  cpu_preview.rs  disk_preview.rs  memory_preview.rs  mod.rs  preview_widgets.rs  processes_preview.rs  resource_preview.rs
src/sidebar/: mod.rs  sidebar_item.rs
src/styles/: button.rs  container.rs  mod.rs  progress_bar.rs  scrollable.rs  text.rs
src/types/: mod.rs  resource_data.rs
