[package]
name = "c-tasks"
version = "0.1.0"
edition = "2021"
license = "GPL-3"
resolver = "2"

[dependencies]
iced = { version = "0.12.1", features = ["advanced"] }
iced_aw = { version = "0.8.0", default-features = false, features = ["icons", "split", "spinner", "menu", "tab_bar", "floating_element"] }
rand = "0.8.5"